# refrender

./: .gitignore  CMakeLists.txt  README.md
include/: nuklear_glfw_gl3.h  opengl.h
src/: camera.c  camera.h  color4.h  main.c  object.c  object.h  object_manager.c  object_manager.h  pre.c  pre.h  renderer.c  renderer.h  shader.c  shader.h  state.c  state.h  vec3.h  vec4.h  window.c  window.h
